@@ -1,6 +1,6 @@
 Package: vcd
-Version: 1.3-1
-Date: 2013-09-11
+Version: 1.3-2
+Date: 2013-12-11
 Title: Visualizing Categorical Data
 Authors@R: c(person(given = "David", family = "Meyer", role = c("aut", "cre"), email = "David.Meyer@R-project.org"),
              person(given = "Achim", family = "Zeileis", role = c("aut")),
